# web-sample

./: .gitignore  CMakeLists.txt
cmake/platform/: linux.cmake
include/: cgi.hpp  main.hpp
include/cgi/: utils.h  utils.hpp
src/: cgi.cpp  main.cpp
src/cgi/: utils.c
